# nuplot

./: .gitignore  Makefile  README.md  TODO.md  area.code-workspace  elm-analyse.json  elm-watch.json  elm.json  nuplot.code-workspace  package.json  pnpm-lock.yaml  tsconfig.json
codegen/: .gitignore  Generate.elm  elm.codegen.json  elm.json  functions.frag  functions.glsl
codegen/Glsl/: GlslConverter.elm  Parser.elm  PrettyPrinter.elm  Simplify.elm  Types.elm
codegen/helpers/: Glsl.elm
codegen/src/: Generate.elm  ParserWithContext.elm
elm/src/: FunctionActivator.elm  OperationActivator.elm  Parser.elm  State.elm  TokenList.elm
elm/tests/: ParserTest.elm
glslParser/: elm.json
glslParser/src/: GlslConverter.elm
java/: .gitignore  Doxyfile  dependometer-template.xml  mePlot_loop.ws
java/Localizator/: .classpath  .pmd  .project
java/Platform_android/: .classpath  .lint4jprefs  .project  AndroidManifest.xml
java/cda/: sssgen.sh  (+1 more)
old/: AssumptionParser.elm  Parser.elm
review/: elm.json
src/: Cleaner.elm  Complex.elm  Expression.elm  FunctionActivator.elm  MatrixDivider.elm  OperationActivator.elm  Parser.elm  ParserModel.elm  State.elm  TokenList.elm  UI.elm  dev.html  dev.ts  index.html  index.ts  main.ts  nuplot.ts  optimized.js.d.ts  service-worker.js  service-worker.ts  worker.ts
tests/: ExpressionFuzzer.elm  GlslFuzzer.elm  NumericRangeTest.elm  ParserTest.elm  PlotterTest.elm  RangeTest.elm  SimplificationTest.elm  SolverTest.elm  TrieTest.elm
tests/raytracing/: .gitignore  CMakeLists.txt  Makefile  foot.h  head.h  main.cpp  version310.glsl
(+652 files in other folders)
